5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1721_3065.log
== TEST (2019-05-02 19:11:45) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if ataque=ca:
	print(ca)
	elif ataque=cus
	print(cus)
		elif ataque=pat
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 8
    if ataque=ca:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:04) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if ataque = ca:
	print(ca)
	elif ataque=cus
	print(cus)
		elif ataque=pat
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 8
    if ataque = ca:
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:16) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque = ca):
	print(ca)
	elif ataque=cus
	print(cus)
		elif ataque=pat
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 8
    if (ataque = ca):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:21) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque=ca):
	print(ca)
	elif ataque=cus
	print(cus)
		elif ataque=pat
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 8
    if (ataque=ca):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:36) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
	elif ataque==cus
	print(cus)
		elif ataque==pat
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif ataque==cus
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:51) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
	elif (ataque==cus)
	print(cus)
		elif (ataque==pat)
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:13:59) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
	elif (ataque==cus):
	print(cus)
		elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:14:28) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
		elif (ataque==cus):
		print(cus)
			elif (ataque==pat):
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:15:07) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
		elif (ataque==cus)
		print(cus)
			elif (ataque==pat)
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:15:12) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
		elif (ataque==cus)
		print(cus)
			elif (ataque==pat)
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:16:45) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
		elif (ataque==cus):
			print(cus)
		elif (ataque==pat):
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:16:58) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
	elif (ataque==cus):
		print(cus)
		elif (ataque==pat):
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:17:04) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
	elif (ataque==cus)
		print(cus)
		elif (ataque==pat):
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque==cus)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:07) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
	elif (ataque1==cus):
		print(cus)
		elif (ataque==pat):
			print(pat)
else:
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 10
    elif (ataque1==cus):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:18:46) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=input(int("valor sorteado"))
ValueError: invalid literal for int() with base 10: 'valor sorteado'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:19:13) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=input(int("valor sorteado"))
ValueError: invalid literal for int() with base 10: 'valor sorteado'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:19:23) 
-- CODE:
ataque=input("tipo de ataque")
valor=input(int("valor sorteado"))
turnos=input(float("numero de turnos"))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=input(int("valor sorteado"))
ValueError: invalid literal for int() with base 10: 'valor sorteado'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:19:50) 
-- CODE:
ataque=input("tipo de ataque: ")
valor=input(int("valor sorteado: "))
turnos=input(float("numero de turnos: "))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor=input(int("valor sorteado: "))
ValueError: invalid literal for int() with base 10: 'valor sorteado: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:20:41) 
-- CODE:
ataque=input("tipo de ataque: ")
valor=input("valor sorteado: ")
turnos=input(float("numero de turnos: "))
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    turnos=input(float("numero de turnos: "))
ValueError: could not convert string to float: 'numero de turnos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:21:01) 
-- CODE:
ataque=input("tipo de ataque: ")
valor=input("valor sorteado: ")
turnos=input("numero de turnos: ")
n>0<5
ca=n/turnos
cus=2*n/turnos
pat=(2*n - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    n>0<5
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:21:47) 
-- CODE:
ataque=input("tipo de ataque: ")
valor=input("valor sorteado: ")
turnos=input("numero de turnos: ")
y=n>0<5
ca=y/turnos
cus=2*y/turnos
pat=(2*y - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y=n>0<5
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:22:37) 
-- CODE:
ataque=input("tipo de ataque: ")
valor=input("valor sorteado: ")
turnos=input("numero de turnos: ")
y=valor>0<5
ca=y/turnos
cus=2*y/turnos
pat=(2*y - 5)/turnos
if (ataque==ca):
	print(ca)
elif (ataque==cus):
	print(cus)
elif (ataque==pat):
		print(pat)
else:
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y=valor>0<5
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
